reset password with JWT token

--- a/src/core/email/templates/passwordReset.pug
+++ b/src/core/email/templates/passwordReset.pug
@@ -2,8 +2,8 @@ extends baseEmail
 
 block content
     p Привет #{firstName},
-    p Добро пожаловать в S-Prof. Мы рады видеть Вас 🎉🙏
-    p Вы успешно верифицировали данные!
+    p Нажмите что бы Сбросить пароль.
+    p 
         table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
             tbody
                 tr
@@ -12,4 +12,4 @@ block content
                             tbody
                                 tr
                                     td
-                                        a(href=`${url}`, target='_blank') Войти на сайт
+                                        a(href=`${url}`, target='_blank') Сбросить ваш пароль
